2009-12-07  Francois Felix Ingrand  <felix@ingrand.net>

	* pu-genom.c (pu_encode_genom_string): strlen returns a size_t
	which is an unsigned long...

2006-08-29  Francois Felix Ingrand  <felix@ingrand.net>

	* pu-genom.c: added unsigned_long_Long... even if they are handled
	as long long by Oprs.

2006-08-28  Francois Felix Ingrand  <felix@ingrand.net>

	* All... added support for long long.

2000-07-27  Francois Felix Ingrand  <felix@laas.fr>

	* pu-parse-tl.c: Remove the warning when requesting less
	parameters than the length of the arg list.

1999-07-22  Francois Felix Ingrand  <felix@laas.fr>

	* pu-genom.c: Use strcasecmp instead of strcmp

1998-06-15  Francois Felix Ingrand  <felix@laas.fr>

	* pu-enum.c: Added this new library.

1998-06-12  Francois Felix Ingrand  <felix@laas.fr>

	* pu-parse-tl.c: Big cleanup....

Tue Oct 14 11:09:53 1997  Francois Felix Ingrand  <felix@laas.fr>

	* pu-parse-tl.c (PUGetPrsTermCompSpecArg): Now return FALSE
	silently when asking for an argument beyond the end of the list.
